# rustgl

./: Cargo.toml
src/: main.rs
src/support/: camera.rs  shader.rs  vertex.txt
