[package]
name = "rustgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
glutin = "*"
ouroboros = "0.14"
cgmath = "0.18"
genmesh = "0.6"
image = "0.23"
obj = { version = "0.10", features = ["genmesh"] }
rand = "0.8"
libc = "0.2.62"
